--- a/package.json
+++ b/package.json
@@ -6,23 +6,29 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "devtools": "./node_modules/.bin/vue-devtools",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps",
-    "devtools": "./node_modules/.bin/vue-devtools"
+    "postuninstall": "electron-builder install-app-deps"
   },
   "main": "main.ts",
   "dependencies": {
+    "@mdi/font": "5.9.55",
     "@vue/devtools": "^6.0.0-beta.21",
     "core-js": "^3.8.3",
+    "roboto-fontface": "*",
     "ts-loader": "~8.2.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuetify": "^3.0.0-beta.0",
+    "vuex": "^4.0.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
+    "@nuxtjs/vuetify": "^1.12.3",
     "@types/electron-devtools-installer": "^2.2.0",
+    "@types/webfontloader": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -32,13 +38,16 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "deepmerge": "^4.2.2",
     "electron": "^13.0.0",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
+    "sass": "~1.32",
+    "sass-loader": "^13.0.2",
     "typescript": "~4.5.5",
-    "vue-cli-plugin-electron-builder": "~2.1.1"
+    "vue-cli-plugin-electron-builder": "~2.1.1",
+    "vue-cli-plugin-vuetify": "~2.5.4",
+    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   }
 }
