--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cal-elec",
+  "name": "JangBro",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,6 +19,7 @@
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "ts-loader": "~8.2.0",
+    "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
