--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "main": "main.ts",
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@types/path-browserify": "^1.0.0",
     "@vue/devtools": "^6.0.0-beta.21",
     "core-js": "^3.8.3",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "path-browserify": "^1.0.1",
     "roboto-fontface": "*",
     "ts-loader": "~8.2.0",
     "v-calendar": "^3.0.0-alpha.8",
